# casa_3d_opengl

./: APRESENTACAO.md  CMakeLists.txt  Camera.h  Geometry.h  Makefile  Mesh.h  Model.h  README.md  Shader.h  Texture.h  ativar_texturas.ps1  check_deps.bat  check_deps.sh  main.cpp  verificar_texturas.ps1
GLFW_Cubo_OO/: GLFW_Cubo_OO.cbp  GLFW_Cubo_OO.layout
GLFW_Cubo_OO/GLFW_Cubo_OO/: main.cpp
GLFW_Cubo_OO/GLFW_Cubo_OO/src/: Banrisul.cpp
shaders/: phong.frag  phong.vert  simple.frag
